--- a/react-vite/src/components/SignupFormModal/SignupForm.css
+++ b/react-vite/src/components/SignupFormModal/SignupForm.css
@@ -29,6 +29,7 @@
 .signup-btn:hover{
     background-color: rgb(26,121,255);
     border: 1px solid rgb(26,121,255);
+    cursor:pointer;
 }
 
 .sign-up-errors {
