--- a/react-vite/src/components/ManageBusiness/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusiness/ManageBusiness.css
@@ -13,6 +13,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
+    min-width: 500px;
+    height:auto;
+    background-color: rgb(245, 245, 245);
 }
 .manage-nav-container{
     text-decoration: none;
@@ -23,7 +27,6 @@
 }
 .nav-bus-container{
     width: 90%;
-    height: 400px;
     display: flex;
     justify-content: space-between;
 }
@@ -41,7 +44,10 @@
 }
 
 .manage-bus-img{
-    width:75%;
+    /* width:75%; */
+    height: 300px;
+    width: 300px;
+    border-radius: 5px;
 }
 
 .manage-btns{
