--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -36,6 +36,7 @@
   border-radius: 4px;
   transition: background-color 0.5s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  white-space: nowrap;
 }
 
 .Nav-btn:hover {
@@ -50,4 +51,39 @@
   left: 0;
   width: 100%;
   height: 100px;
+}
+.nav-btn-container{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+@media (max-width: 1349px) {
+  .nav-bar-ul{
+    display: flex;
+    flex-direction: column;
+  }
+  .landing-category-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .landing-category{
+    width: 18%;
+    height: 18%;
+    min-width: 100px;
+  }
+  .search-component{
+    width: 100%;
+  }
+  .search-input{
+    width: 50%;
+  }
+  .nav-btn-container{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    gap: 10px;
+  }
 }
