--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -57,8 +57,11 @@
   flex-direction: row;
   gap: 10px;
 }
+.search-component{
+  width: 35%;
+}
 
-@media (max-width: 1349px) {
+@media (max-width: 1120px) {
   .nav-bar-ul{
     display: flex;
     flex-direction: column;
@@ -72,10 +75,11 @@
   .landing-category{
     width: 18%;
     height: 18%;
-    min-width: 100px;
+    min-width: 150px;
+    min-height: 150px;
   }
   .search-component{
-    width: 100%;
+    width: 80%;
   }
   .search-input{
     width: 50%;
@@ -85,5 +89,11 @@
     flex-direction: row;
     padding: 20px;
     gap: 10px;
+  }
+  .toggledropdown{
+    top: 15px;
+  }
+  .profile-dropdown{
+    top:30px;
   }
 }
