--- a/react-vite/src/components/BusinessReviews/BusinessReviews.css
+++ b/react-vite/src/components/BusinessReviews/BusinessReviews.css
@@ -9,6 +9,14 @@
     background-color: rgb(245, 245, 245);
 }
 
+.review-container.full {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    margin: 24px auto;
+}
+
 .name-and-buttons {
     display: flex;
     justify-content: space-between;
