--- a/react-vite/src/components/LandingPage/LandingPage.css
+++ b/react-vite/src/components/LandingPage/LandingPage.css
@@ -58,7 +58,7 @@
     box-sizing: border-box;
     text-decoration: none;
     font-weight: bold;
-    color: #1A79FF;
+    color: black;
     background-color: rgb(250, 250, 250);
     border: 1px solid lightgray;
 }
@@ -195,3 +195,10 @@
     color: white;
 }
 
+.category-img{
+    height: 50px;
+}
+
+.landing-bar{
+    margin: 20px;
+}
