--- a/react-vite/src/components/BusinessDetails/BusinessDetails.css
+++ b/react-vite/src/components/BusinessDetails/BusinessDetails.css
@@ -1,28 +1,24 @@
 .business-detail-page-container {
     display: flex;
     flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
     align-items: center;
 }
 
 .business-detail-header-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 80%;
 }
 
 .business-detail-header-img {
-    width: 90%;
-    min-width: 600px;
-    height: 360px;
     padding: 16px;
     background-size: cover;
     background-position: center
 }
 
 .business-detail-header-text {
-    color: black;
-    background-color: rgb(255, 255, 255, 0.25);
-    border-radius: 4px 4px;
+    color: white;
+    background-color: rgb(0, 0, 0, 0.25);
     padding: 4px;
     width: fit-content;
 }
@@ -218,7 +214,8 @@
 .business-detail-all-images-container {
     justify-content: center;
     margin: 16px;
-    max-width: 960px;
+    width: 65%;
+    /* max-width: 960px; */
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -229,16 +226,17 @@
     padding: 0;
     border: none;
     background: none;
-    display: block;
-    width: 18%;
-    flex: 0 0 auto;
+    display: inline-block;
+    position: relative;
     margin-right: 10px;
 }
 
 .business-dtl-s-images {
-    width: 100%;
-    height: auto;
+    width: 200px;
+    height: 120px;
+    object-fit: cover;
 }
+
 .business-dtl-s-images:hover {
     cursor: pointer;
 }
@@ -247,9 +245,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .big-image {
+}
+
+.big-image {
     max-width: 100%;
     max-height: 100%;
-  }
+}
