aws update images

--- a/react-vite/src/components/BusinessForm/BusinessForm.css
+++ b/react-vite/src/components/BusinessForm/BusinessForm.css
@@ -139,3 +139,12 @@ h1 {
   color: white;
   filter: brightness(110%);
 }
+
+.file-input-labels-noname:hover {
+  cursor: pointer;
+}
+
+.thumbnails-noname{
+  width: 100px;
+  height: 100px;
+}
