--- a/react-vite/src/components/BusinessReviews/BusinessReviews.css
+++ b/react-vite/src/components/BusinessReviews/BusinessReviews.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: flex-start;
     background-color: rgb(245, 245, 245);
+    min-width: 300px;
 }
 
 .review-container.full {
