fixed updates on images and styling

--- a/react-vite/src/components/DeleteBusiness/DeleteBusiness.css
+++ b/react-vite/src/components/DeleteBusiness/DeleteBusiness.css
@@ -26,6 +26,7 @@
 .delete-modal-btn:hover{
     background-color: grey;
     border: 1px solid grey;
+    cursor: pointer;
 }
 
 .confirm-delete-btn{
