--- a/react-vite/src/components/ManageBusiness/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusiness/ManageBusiness.css
@@ -67,6 +67,7 @@
     border: 1px solid rgb(175, 17, 17);
     color: white;
     list-style: none;
+    cursor: pointer;
 }
 .manage-delete:hover{
     background-color: rgb(231, 29, 29);
