--- a/react-vite/src/components/ManageBusiness/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusiness/ManageBusiness.css
@@ -57,6 +57,10 @@
     width: 200px;
     height: 35px;
     margin: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
 .manage-btns:hover{
     background-color: rgb(26,121,255);
@@ -75,5 +79,9 @@
 }
 .manage-btn-text{
     color: white;
-    text-decoration: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
 }
