--- a/react-vite/src/components/ManageBusiness/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusiness/ManageBusiness.css
@@ -55,7 +55,7 @@
     border: 1px solid rgb(91, 158, 251);
     box-shadow: 3px 3px 3px grey;
     width: 200px;
-    height: 35px;
+    padding: 15px 0;
     margin: 10px;
     cursor: pointer;
     display: flex;
@@ -66,14 +66,26 @@
     background-color: rgb(26,121,255);
     border: 1px solid rgb(26,121,255);
 }
-.manage-delete{
+.manage-delete *{
     background-color: rgb(175, 17, 17);
     border: 1px solid rgb(175, 17, 17);
     color: white;
-    list-style: none;
+    box-shadow: 3px 3px 3px grey;
+    width: 200px;
+    padding: 15px 0;
+    margin: 10px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
-.manage-delete:hover{
+.manage-delete{
+    padding: 0;
+    margin: 0px;
+    border: none;
+    background-color: rgb(245, 245, 245);
+}
+.manage-delete *:hover{
     background-color: rgb(231, 29, 29);
     border: 1px solid rgb(231, 29, 29);
 }
